tests/fixtures/valid/spec_reuse/variants.etcm
$spec: spec.etcm

impl smoke:
  train_file: "data/smoke.txt"
  retries: 3
