tests/fixtures/invalid/spec_ref_fragment.etcm
$spec: specs/base.etcm#bad

impl default:
  value: 1
